formatting readme and source code